# passmg

./: .SRCINFO  .clang-format  .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md  pass.sql  run_tests.sh
.github/workflows/: ci.yml  cmake.yml
include/libpassmg/: PasswordManager.hpp  config.hpp.in  crypt.hpp  exceptions.hpp  types.hpp  utils.hpp
lib/: CMakeLists.txt  PasswordManager.cpp  crypt.cpp  db.cpp  utils.cpp
src/: CMakeLists.txt  auth.cpp  auth.h  core.cpp  core.h  crypt.cpp  crypt.h  db.cpp  db.h  global_types.h  globals.h  main.cpp  models.cpp  models.h  utils.cpp  utils.h  utils.hpp
tests/: CMakeLists.txt  PasswordManager.test.cpp  crypt.test.cpp  utils.test.cpp
